--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,14 @@
                 android:value="com.example.kyubi.Registrar"></meta-data>
         </activity>
         <activity
+            android:name=".AfegirNew"
+            android:label="AfegirNew"
+            android:parentActivityName=".AfegirNew">
+            <meta-data
+                android:name="android.support.parent_activity"
+                android:value="com.example.kyubi.AfegirNew"></meta-data>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
